--- a/Character_Model_DynamicRnn_LSTM.ipynb
+++ b/Character_Model_DynamicRnn_LSTM.ipynb
@@ -427,9 +427,7 @@
     "                        X_eval = [idx]\n",
     "                        X_eval = np.expand_dims(np.array(X_eval), axis=0)\n",
     "                        counter += 1\n",
-    "                    if (counter == 50):\n",
-    "                        indices.append(char_to_class_id['\\n'])\n",
-    "                    print(''.join([class_id_to_char[i] for i in indices]))\n",
+    "                    print(''.join([class_id_to_char[i] for i in indices]).strip())\n",
     "                \n",
     "        print(\"Optimization Finished!\")\n",
     "    return sess"
@@ -444,387 +442,217 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step 2000, Loss= 2.2563\n",
+      "Step 2000, Loss= 2.0457\n",
       "list of sampled characters:\n",
-      "kuclhet\n",
-      "\n",
-      "bbëguw\n",
-      "\n",
-      "gapoeësd\n",
-      "\n",
-      "gmabe gwatbcbabast\n",
-      "\n",
-      "dinduwse\n",
-      "\n",
-      "heogeg\n",
-      "\n",
-      "kal\n",
-      "\n",
-      "gyker\n",
-      "\n",
-      "grooas\n",
-      "\n",
-      "blafder bat\n",
-      "\n",
-      "Step 4000, Loss= 3.0264\n",
-      "list of sampled characters:\n",
-      "fudisan\n",
-      "\n",
-      "genbiinkavam\n",
-      "\n",
-      "jeepardave der\n",
-      "\n",
-      "vaundae\n",
-      "\n",
-      "heiluberlt\n",
-      "\n",
-      "bermain\n",
-      "\n",
-      "gak ha\n",
-      "\n",
-      "laogcbeelbaars\n",
-      "\n",
-      "genteijp\n",
-      "\n",
-      "loce\n",
-      "\n",
-      "Step 6000, Loss= 2.3418\n",
-      "list of sampled characters:\n",
-      "arkijken\n",
-      "\n",
-      "lerreurkel\n",
-      "\n",
-      "heem\n",
-      "\n",
-      "anhouk\n",
-      "\n",
-      "korlurom\n",
-      "\n",
-      "lortensden\n",
-      "\n",
-      "boolborg\n",
-      "\n",
-      "yigen\n",
-      "\n",
-      "foimindom\n",
-      "\n",
-      "bijgwoat\n",
-      "\n",
-      "Step 8000, Loss= 2.1380\n",
-      "list of sampled characters:\n",
-      "doelverk\n",
-      "\n",
-      "heilovlilwel\n",
-      "\n",
-      "de atsurn\n",
-      "\n",
-      "hoem\n",
-      "\n",
-      "oegserert\n",
-      "\n",
-      "tgontkeen\n",
-      "\n",
-      "beul\n",
-      "\n",
-      "horm\n",
-      "\n",
-      "healhem\n",
-      "\n",
-      "poinncken\n",
-      "\n",
-      "Step 10000, Loss= 1.6976\n",
-      "list of sampled characters:\n",
-      "beng\n",
-      "\n",
-      "bosahaer\n",
-      "\n",
-      "kbinjon\n",
-      "\n",
-      "kunemt\n",
-      "\n",
-      "kasgam\n",
-      "\n",
-      "btomkum\n",
-      "\n",
-      "honnat\n",
-      "\n",
-      "hiende-bindwoem\n",
-      "\n",
-      "hin\n",
-      "\n",
-      "bosgem\n",
-      "\n",
-      "Step 12000, Loss= 2.4121\n",
-      "list of sampled characters:\n",
-      "grejd\n",
-      "\n",
-      "escht\n",
-      "\n",
-      "har\n",
-      "\n",
-      "gruenber\n",
-      "\n",
-      "de keesd\n",
-      "\n",
-      "bvoidhe arsfe\n",
-      "\n",
-      "elkent\n",
-      "\n",
-      "de boek\n",
-      "\n",
-      "hachten\n",
-      "\n",
-      "leigen ens\n",
-      "\n",
-      "Step 14000, Loss= 1.9082\n",
-      "list of sampled characters:\n",
-      "abkalkt\n",
-      "\n",
-      "deeren\n",
-      "\n",
-      "soaenenseked\n",
-      "\n",
-      "ceekiizejen\n",
-      "\n",
-      "auuhaust\n",
-      "\n",
-      "brijnthoukg\n",
-      "\n",
-      "kargehaamt\n",
-      "\n",
-      "hetave\n",
-      "\n",
-      "hokindravenom\n",
-      "\n",
-      "veuncd\n",
-      "\n",
-      "Step 16000, Loss= 2.3282\n",
-      "list of sampled characters:\n",
-      "gasstasg\n",
-      "\n",
-      "haklaxave ralam\n",
-      "\n",
-      "lenga\n",
-      "\n",
-      "tbege eg\n",
-      "\n",
-      "badloal\n",
-      "\n",
-      "mroerk\n",
-      "\n",
-      "kulbrog\n",
-      "\n",
-      "batninsrat\n",
-      "\n",
-      "altlork\n",
-      "\n",
-      "bionder\n",
-      "\n",
-      "Step 18000, Loss= 1.8031\n",
-      "list of sampled characters:\n",
-      "best\n",
-      "\n",
-      "buehum\n",
-      "\n",
-      "jo\n",
-      "\n",
-      "hielnoven\n",
-      "\n",
-      "lomtbalsenj\n",
-      "\n",
-      "heshoechsovre leid\n",
-      "\n",
-      "roen\n",
-      "\n",
-      "hoekerarp\n",
-      "\n",
-      "hoiskhuup\n",
-      "\n",
-      "hooke ruesge\n",
-      "\n",
-      "Step 20000, Loss= 2.0226\n",
-      "list of sampled characters:\n",
-      "hatukoven\n",
-      "\n",
-      "de sdlaen\n",
-      "\n",
-      "de ijken\n",
-      "\n",
-      "alterlt\n",
-      "\n",
-      "derch\n",
-      "\n",
-      "klanteeven\n",
-      "\n",
-      "dur\n",
-      "\n",
-      "wijg\n",
-      "\n",
-      "karpinek\n",
-      "\n",
-      "kdene s\n",
-      "\n",
-      "Step 22000, Loss= 2.2856\n",
-      "list of sampled characters:\n",
-      "kratvorde\n",
-      "\n",
-      "jan\n",
-      "\n",
-      "lisste\n",
-      "\n",
-      "dorrucmeesberid\n",
-      "\n",
-      "higdor\n",
-      "\n",
-      "henvoende\n",
-      "\n",
-      "ygomun-omes\n",
-      "\n",
-      "de reenzard\n",
-      "\n",
-      "gasreden\n",
-      "\n",
-      "houleden\n",
-      "\n",
-      "Step 24000, Loss= 2.2517\n",
-      "list of sampled characters:\n",
-      "stmeid\n",
-      "\n",
-      "adroivadlig\n",
-      "\n",
-      "de her-mard\n",
-      "\n",
-      "lekwen\n",
-      "\n",
-      "hind\n",
-      "\n",
-      "leum\n",
-      "\n",
-      "dark\n",
-      "\n",
+      "hoindek\n",
+      "dekhejkhi kuen\n",
+      "erd\n",
+      "hapssendem\n",
+      "decan a l-th\n",
+      "ercgensvelkerl\n",
       "ar\n",
-      "\n",
-      "cetsel\n",
-      "\n",
-      "bejkem\n",
-      "\n",
-      "Step 26000, Loss= 1.7893\n",
+      "hoodrerdoo\n",
+      "len\n",
+      "haldrae\n",
+      "Step 4000, Loss= 2.5095\n",
       "list of sampled characters:\n",
-      "bokleneren\n",
-      "\n",
-      "golo\n",
-      "\n",
-      "furerijs\n",
-      "\n",
-      "het\n",
-      "\n",
-      "het sinpen\n",
-      "\n",
-      "erber\n",
-      "\n",
-      "allelg-delkes\n",
-      "\n",
-      "bakreinsorverhurbreet\n",
-      "\n",
-      "biowuem\n",
-      "\n",
-      "hele tar\n",
-      "\n",
-      "Step 28000, Loss= 1.9315\n",
+      "delend\n",
+      "blosigmesgile\n",
+      "enci\n",
+      "glonf\n",
+      "has\n",
+      "vered\n",
+      "loikeno\n",
+      "auken\n",
+      "-gleoik\n",
+      "galdawold\n",
+      "Step 6000, Loss= 2.3525\n",
       "list of sampled characters:\n",
-      "achenpaek\n",
-      "\n",
-      "kaere loorib\n",
-      "\n",
-      "de de la\n",
-      "\n",
-      "de uk\n",
-      "\n",
-      "haosj hmoert\n",
-      "\n",
-      "sel  \n",
-      "\n",
-      "et\n",
-      "\n",
-      "broer-leia\n",
-      "\n",
-      "grahout\n",
-      "\n",
-      "gigkele\n",
-      "\n",
-      "Step 30000, Loss= 1.9042\n",
+      "frssgesj\n",
+      "boi-scsek\n",
+      "kormhorp\n",
+      "albkerl\n",
+      "mayoert\n",
+      "gulmengessayk\n",
+      "hhasnfel\n",
+      "bynlatebde\n",
+      "buin\n",
+      "kuixeresdg\n",
+      "Step 8000, Loss= 2.0971\n",
       "list of sampled characters:\n",
-      "dinwerart\n",
-      "\n",
-      "doef\n",
-      "\n",
-      "klinnardeseer\n",
-      "\n",
-      "frle ren\n",
-      "\n",
-      "iosg\n",
-      "\n",
-      "kagen leu\n",
-      "\n",
-      "hurt\n",
-      "\n",
-      "de ede\n",
-      "\n",
-      "de senrind\n",
-      "\n",
-      "dum\n",
-      "\n",
-      "Step 32000, Loss= 3.1170\n",
+      "de mom\n",
+      "hoorda\n",
+      "hi id\n",
+      "hauf\n",
+      "dejgheene\n",
+      "lom\n",
+      "kruold\n",
+      "veakral\n",
+      "boanhoeke\n",
+      "jhtwi\n",
+      "Step 10000, Loss= 2.3584\n",
       "list of sampled characters:\n",
-      "harsleen\n",
+      "brum\n",
+      "gesgake\n",
       "\n",
-      "derglijke\n",
-      "\n",
-      "bwliep\n",
-      "\n",
-      "hooscg\n",
-      "\n",
-      "kluefe\n",
-      "\n",
-      "herte\n",
-      "\n",
-      "helder\n",
-      "\n",
-      "krakuurd\n",
-      "\n",
-      "de k\n",
-      "\n",
-      "lenl\n",
-      "\n",
-      "Step 34000, Loss= 2.2154\n",
+      "burdurke\n",
+      "bejsdi driz\n",
+      "vrort\n",
+      "gruoajs\n",
+      "lorghas\n",
+      "boezaen\n",
+      "horvel\n",
+      "Step 12000, Loss= 1.8283\n",
       "list of sampled characters:\n",
-      "ade ighot\n",
-      "\n",
-      "zat\n",
-      "\n",
-      "bendloum\n",
-      "\n",
-      "hijk\n",
-      "\n",
-      "hiildeeerg\n",
-      "\n",
-      "heegterinntet\n",
-      "\n",
-      "hoik\n",
-      "\n",
-      "gren\n",
-      "\n",
-      "barves\n",
-      "\n",
-      "rem\n",
-      "\n",
+      "dendroog\n",
+      "kindep\n",
+      "ateijg\n",
+      "bar\n",
+      "boepeg\n",
+      "lorlupen\n",
+      "kual\n",
+      "bagechpeser\n",
+      "deunejkerst\n",
+      "wend\n",
+      "Step 14000, Loss= 2.1790\n",
+      "list of sampled characters:\n",
+      "doolken\n",
+      "lostoind\n",
+      "i\n",
+      "loubloek\n",
+      "bu\n",
+      "abose\n",
+      "londe\n",
+      "gougencr\n",
+      "blalden\n",
+      "hom\n",
+      "Step 16000, Loss= 2.5265\n",
+      "list of sampled characters:\n",
+      "birk\n",
+      "krord\n",
+      "rbe de lneum\n",
+      "labhavuss hoegen\n",
+      "lilt\n",
+      "i aene sk\n",
+      "krrassar\n",
+      "kreilup\n",
+      "llerde\n",
+      "lantsnin\n",
+      "Step 18000, Loss= 1.6399\n",
+      "list of sampled characters:\n",
+      "heing\n",
+      "rirdut\n",
+      "derneen\n",
+      "klot ankkiiul-kroibelnuel\n",
+      "bamlberkumef\n",
+      "loen\n",
+      "globoorst\n",
+      "baenhoikerveong\n",
+      "hueveilem\n",
+      "doelgenulezerk\n",
+      "Step 20000, Loss= 1.8061\n",
+      "list of sampled characters:\n",
+      "kroogbouxox palk\n",
+      "brou\n",
+      "louvel\n",
+      "groefam\n",
+      "hat brawhisent\n",
+      "doxalgowill\n",
+      "bamontean\n",
+      "eie\n",
+      "broontst\n",
+      "elsdenwechtoyn\n",
+      "Step 22000, Loss= 2.5251\n",
+      "list of sampled characters:\n",
+      "bekgi awam\n",
+      "ak\n",
+      "erp\n",
+      "linarg\n",
+      "ijk\n",
+      "due\n",
+      "li sgomp\n",
+      "di bi\n",
+      "hink\n",
+      "hinchtoep\n",
+      "Step 24000, Loss= 2.4710\n",
+      "list of sampled characters:\n",
+      "heuiee\n",
+      "eukenven lin\n",
+      "coudeu\n",
+      "bygloed\n",
+      "uibi louken\n",
+      "haltachser\n",
+      "luseragel\n",
+      "enen\n",
+      "keyl\n",
+      "loerndouke\n",
+      "Step 26000, Loss= 2.2351\n",
+      "list of sampled characters:\n",
+      "gen\n",
+      "gaskberden\n",
+      "dejnmerilzreaide\n",
+      "de aden\n",
+      "annli-etdensdender\n",
+      "kuorbenerweeve chadooien\n",
+      "huekupwes\n",
+      "bbenudenker\n",
+      "umoozenden\n",
+      "higberk\n",
+      "Step 28000, Loss= 2.7458\n",
+      "list of sampled characters:\n",
+      "boagsch\n",
+      "boembenhot\n",
+      "kuld\n",
+      "adsgoen\n",
+      "grinhaur\n",
+      "broanhuo\n",
+      "heolensieboidenvegter\n",
+      "gorkpoott\n",
+      "eldhche\n",
+      "goane\n",
+      "Step 30000, Loss= 2.0057\n",
+      "list of sampled characters:\n",
+      "de aartjee\n",
+      "groidautsderr\n",
+      "louchen\n",
+      "khtermors\n",
+      "linwade\n",
+      "blooukenaf\n",
+      "hil\n",
+      "eil\n",
+      "laeantsboli\n",
+      "geceeg\n",
+      "Step 32000, Loss= 2.4476\n",
+      "list of sampled characters:\n",
+      "lijlinbrool\n",
+      "egesden\n",
+      "keoden\n",
+      "hui woik\n",
+      "grouk\n",
+      "ool\n",
+      "helkentend\n",
+      "felhoozer\n",
+      "etien\n",
+      "de donbeal\n",
+      "Step 34000, Loss= 1.9942\n",
+      "list of sampled characters:\n",
+      "hoeesghoy\n",
+      "hiek\n",
+      "heup\n",
+      "hilel\n",
+      "loilhenel\n",
+      "kout\n",
+      "broay\n",
+      "algusnnerp\n",
+      "brirdornchon\n",
+      "gaegooonup\n",
       "Optimization Finished!\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.client.session.Session at 0x11be0f7b8>"
+       "<tensorflow.python.client.session.Session at 0x10535ecf8>"
       ]
      },
      "execution_count": 9,
